début page autres

--- a/autres.html
+++ b/autres.html
@@ -23,40 +23,49 @@
   <div class="othersLine">
     <!--Autres 1-->
     <figure>
-      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+      <a href="https://shop.gotaga.tv/collections/accessoires/products/snapback-dark" target="_blank"> <img src="https://cdn.shopify.com/s/files/1/0045/8230/9955/products/Copie_de_Copie_de_Copie_de_DSC01555_2048x2048.jpg?v=1549309086" alt="Casquette Gotaga" class="others" /></a>
       <figcaption>
-        Just cause 4
+        Casquette Gotaga
       </figcaption>
       <figcaption>
-        28,97€
+        Version noire
+      </figcaption>
+      <figcaption>
+        25,00€
       </figcaption>
     </figure>
 
     <!--Autres 2-->
     <figure>
-      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+      <a href="https://www.amazon.fr/Esprits-criminels-Saison-Joe-Mantegna/dp/B07HSLVBVC/ref=zg_bs_409468_27?_encoding=UTF8&psc=1&refRID=5RWEYV0XDWDRY795M84Q" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61AQaz9ykmL._SL1000_.jpg" alt="Esprit Criminels - Saison 4" class="others" /></a>
       <figcaption>
-        Just cause 4
+        Esprits Criminels
       </figcaption>
       <figcaption>
-        28,97€
+        L'intégrale de la saison 14
+      </figcaption>
+      <figcaption>
+        23,66€
       </figcaption>
     </figure>
 
     <!--Autres 3-->
     <figure>
-      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+      <a href="https://www.amazon.fr/Friends-lInt%C3%A9grale-Saisons-Coffret-Blu-Ray/dp/B008HQCPCU/ref=cm_cr_arp_d_product_top?ie=UTF8" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/919CzxAoKRL._SL1500_.jpg" alt="Friends - L'intégrale" class="others" /></a>
       <figcaption>
-        Just cause 4
+        Friends
       </figcaption>
       <figcaption>
-        28,97€
+        L'intégrale en Blu-Ray
+      </figcaption>
+      <figcaption>
+        62,88€
       </figcaption>
     </figure>
 
-    <!--Autres 4-->
+    <!--Autres 4
     <figure>
-      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
         Just cause 4
       </figcaption>
@@ -64,12 +73,13 @@
         28,97€
       </figcaption>
     </figure>
+    -->
   </div>
 
   <div class="othersLine">
-    <!--Autres 5-->
+    <!--Autres 5
     <figure>
-      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
         Just cause 4
       </figcaption>
@@ -77,10 +87,10 @@
         28,97€
       </figcaption>
     </figure>
-
-    <!--Autres 6-->
+-->
+    <!--Autres 6
     <figure>
-      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
         Just cause 4
       </figcaption>
@@ -88,10 +98,10 @@
         28,97€
       </figcaption>
     </figure>
-
-    <!--Autres 7-->
+-->
+    <!--Autres 7
     <figure>
-      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
         Just cause 4
       </figcaption>
@@ -99,10 +109,10 @@
         28,97€
       </figcaption>
     </figure>
-
-    <!--Autres 8-->
+-->
+    <!--Autres 8
     <figure>
-      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
         Just cause 4
       </figcaption>
@@ -110,12 +120,13 @@
         28,97€
       </figcaption>
     </figure>
+    -->
   </div>
 
   <div class="othersLine">
-    <!--Autres 9-->
+    <!--Autres 9
     <figure>
-      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
         Just cause 4
       </figcaption>
@@ -123,10 +134,10 @@
         28,97€
       </figcaption>
     </figure>
-
-    <!--Autres 10-->
+-->
+    <!--Autres 10
     <figure>
-      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
         Just cause 4
       </figcaption>
@@ -134,10 +145,10 @@
         28,97€
       </figcaption>
     </figure>
-
-    <!--Autres 11-->
+-->
+    <!--Autres 11
     <figure>
-      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
         Just cause 4
       </figcaption>
@@ -145,10 +156,10 @@
         28,97€
       </figcaption>
     </figure>
-
-    <!--Autres 12-->
+-->
+    <!--Autres 12
     <figure>
-      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
         Just cause 4
       </figcaption>
@@ -156,12 +167,13 @@
         28,97€
       </figcaption>
     </figure>
+    -->
   </div>
 
   <div class="othersLine">
-    <!--Autres 13-->
+    <!--Autres 13
     <figure>
-      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
         Just cause 4
       </figcaption>
@@ -169,10 +181,10 @@
         28,97€
       </figcaption>
     </figure>
-
-    <!--Autres 14-->
+-->
+    <!--Autres 14
     <figure>
-      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
         Just cause 4
       </figcaption>
@@ -180,10 +192,10 @@
         28,97€
       </figcaption>
     </figure>
-
-    <!--Autres 15-->
+-->
+    <!--Autres 15
     <figure>
-      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
         Just cause 4
       </figcaption>
@@ -191,10 +203,10 @@
         28,97€
       </figcaption>
     </figure>
-
-    <!--Autres 16-->
+-->
+    <!--Autres 16
     <figure>
-      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
         Just cause 4
       </figcaption>
@@ -202,12 +214,13 @@
         28,97€
       </figcaption>
     </figure>
+    -->
   </div>
 
   <div class="othersLine">
-    <!--Autres 17-->
+    <!--Autres 17
     <figure>
-      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
         Just cause 4
       </figcaption>
@@ -215,10 +228,10 @@
         28,97€
       </figcaption>
     </figure>
-
-    <!--Autres 18-->
+-->
+    <!--Autres 18
     <figure>
-      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
         Just cause 4
       </figcaption>
@@ -226,10 +239,10 @@
         28,97€
       </figcaption>
     </figure>
-
-    <!--Autres 19-->
+-->
+    <!--Autres 19
     <figure>
-      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
         Just cause 4
       </figcaption>
@@ -237,10 +250,10 @@
         28,97€
       </figcaption>
     </figure>
-
-    <!--Autres 20-->
+-->
+    <!--Autres 20
     <figure>
-      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
       <figcaption>
         Just cause 4
       </figcaption>
@@ -248,6 +261,7 @@
         28,97€
       </figcaption>
     </figure>
+    -->
   </div>
 
 </body>
