--- a/autres.html
+++ b/autres.html
@@ -7,7 +7,7 @@
   <title>Ma Wishlist - Autres</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="assets/style/style.css">
-  <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png"/>
+  <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png" />
 </head>
 
 <body>
@@ -23,7 +23,8 @@
   <div class="othersLine">
     <!--Autres 1-->
     <figure>
-      <a href="https://shop.gotaga.tv/collections/accessoires/products/snapback-dark" target="_blank"> <img src="https://cdn.shopify.com/s/files/1/0045/8230/9955/products/Copie_de_Copie_de_Copie_de_DSC01555_2048x2048.jpg?v=1549309086" alt="Casquette Gotaga" class="others" /></a>
+      <a href="https://shop.gotaga.tv/collections/accessoires/products/snapback-dark" target="_blank"> <img src="https://cdn.shopify.com/s/files/1/0045/8230/9955/products/Copie_de_Copie_de_Copie_de_DSC01555_2048x2048.jpg?v=1549309086"
+          alt="Casquette Gotaga" class="others" /></a>
       <figcaption>
         Casquette Gotaga
       </figcaption>
@@ -37,7 +38,8 @@
 
     <!--Autres 2-->
     <figure>
-      <a href="https://www.amazon.fr/Esprits-criminels-Saison-Joe-Mantegna/dp/B07HSLVBVC/ref=zg_bs_409468_27?_encoding=UTF8&psc=1&refRID=5RWEYV0XDWDRY795M84Q" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61AQaz9ykmL._SL1000_.jpg" alt="Esprit Criminels - Saison 4" class="others" /></a>
+      <a href="https://www.amazon.fr/Esprits-criminels-Saison-Joe-Mantegna/dp/B07HSLVBVC/ref=zg_bs_409468_27?_encoding=UTF8&psc=1&refRID=5RWEYV0XDWDRY795M84Q" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/61AQaz9ykmL._SL1000_.jpg" alt="Esprit Criminels - Saison 4" class="others" /></a>
       <figcaption>
         Esprits Criminels
       </figcaption>
@@ -51,7 +53,8 @@
 
     <!--Autres 3-->
     <figure>
-      <a href="https://www.amazon.fr/Friends-lInt%C3%A9grale-Saisons-Coffret-Blu-Ray/dp/B008HQCPCU/ref=cm_cr_arp_d_product_top?ie=UTF8" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/919CzxAoKRL._SL1500_.jpg" alt="Friends - L'intégrale" class="others" /></a>
+      <a href="https://www.amazon.fr/Friends-lInt%C3%A9grale-Saisons-Coffret-Blu-Ray/dp/B008HQCPCU/ref=cm_cr_arp_d_product_top?ie=UTF8" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/919CzxAoKRL._SL1500_.jpg"
+          alt="Friends - L'intégrale" class="others" /></a>
       <figcaption>
         Friends
       </figcaption>
@@ -63,17 +66,22 @@
       </figcaption>
     </figure>
 
-    <!--Autres 4
+    <!--Autres 4-->
     <figure>
-      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <a href="https://www.nbastore.eu/stores/nba/fr/c/accessoires/souvenirs/bouteilles-&-gourdes" target="_blank"> <img src="http://img.fruugo.com/product/2/23/71374232_max.jpg" alt="Mug NBA" class="others" /></a>
       <figcaption>
-        Just cause 4
+        Tasses d'équipes NBA
       </figcaption>
       <figcaption>
-        28,97€
+        Peu importe l'équipe
+      </figcaption>
+      <figcaption>
+        (Ma préférée Cleveland)
+      </figcaption>
+      <figcaption>
+        8,00€ la tasse
       </figcaption>
     </figure>
-    -->
   </div>
 
   <div class="othersLine">
