--- a/livres.html
+++ b/livres.html
@@ -130,8 +130,8 @@
 
     <!--Livre 8-->
     <figure>
-      <a href="https://www.amazon.fr/Lart-guerre-Traduit-comment%C3%A9-chinois/dp/2818504961?ref_=Oct_RAsinC_Ajax_301061_2&pf_rd_p=e5b0b4bf-eca8-52d1-8616-3e2c263b1a1e&pf_rd_s=merchandised-search-8&pf_rd_t=101&pf_rd_i=301061&pf_rd_m=A1X6FK5RDHNB96&pf_rd_r=79P8R1T9R8DG5CW5FW9X&pf_rd_r=79P8R1T9R8DG5CW5FW9X&pf_rd_p=e5b0b4bf-eca8-52d1-8616-3e2c263b1a1e" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/418CdHQ%2BkLL.jpg" alt="L'art de la Guerre" class="books" /></a>
+      <a href="https://www.amazon.fr/Lart-guerre-Traduit-comment%C3%A9-chinois/dp/2818504961?ref_=Oct_RAsinC_Ajax_301061_2&pf_rd_p=e5b0b4bf-eca8-52d1-8616-3e2c263b1a1e&pf_rd_s=merchandised-search-8&pf_rd_t=101&pf_rd_i=301061&pf_rd_m=A1X6FK5RDHNB96&pf_rd_r=79P8R1T9R8DG5CW5FW9X&pf_rd_r=79P8R1T9R8DG5CW5FW9X&pf_rd_p=e5b0b4bf-eca8-52d1-8616-3e2c263b1a1e"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/418CdHQ%2BkLL.jpg" alt="L'art de la Guerre" class="books" /></a>
       <figcaption>
         Sun Tzu
       </figcaption>
@@ -233,7 +233,7 @@
 
     <!--Livre 14-->
     <figure>
-      <a href="https://www.amazon.fr/Tr%C3%B4ne-fer-lInt%C3%A9grale-books-Thrones/dp/2756415936/ref=pd_sim_14_9?_encoding=UTF8&pd_rd_i=2756415936&pd_rd_r=3f9c3e44-5f05-11e9-9ab7-adaade3fec5d&pd_rd_w=WTIGB&pd_rd_wg=Xc3GJ&pf_rd_p=7e133c34-2a2a-4f4f-8372-6a26c70ca073&pf_rd_r=DY62KACJE73J3FTNY187&psc=1&refRID=DY62KACJE73J3FTNY187"
+      <a href="https://www.amazon.fr/Tr%C3%B4ne-fer-lInt%C3%A9grale-Thrones-Tomes/dp/2756408417/ref=pd_bxgy_14_img_2/257-1218540-6150940?_encoding=UTF8&pd_rd_i=2756408417&pd_rd_r=7ecd5aa1-609d-11e9-95e3-e947cfa1b065&pd_rd_w=r0YsU&pd_rd_wg=mHBVF&pf_rd_p=e6148c64-3e38-4dde-b49b-61e5910a29fa&pf_rd_r=12EF5BCCXCK62YYDSA2J&psc=1&refRID=12EF5BCCXCK62YYDSA2J"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81Svq8FcIhL.jpg" alt="L'intégrale du Trône de Fer - Partie 4" class="books" /></a>
       <figcaption>
         George R.R. Martin
@@ -301,7 +301,8 @@
 
     <!--Livre 18-->
     <figure>
-      <a href="https://www.amazon.fr/Combien-veux-tu-m%C3%A9pouser-Saphia-Azzeddine/dp/224680437X/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-5" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81RVBB8f9sL.jpg" alt="Combien veux-tu m'épouser ?" class="books" /></a>
+      <a href="https://www.amazon.fr/Combien-veux-tu-m%C3%A9pouser-Saphia-Azzeddine/dp/224680437X/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-5"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81RVBB8f9sL.jpg" alt="Combien veux-tu m'épouser ?" class="books" /></a>
       <figcaption>
         Saphia Azzeddine
       </figcaption>
@@ -315,7 +316,8 @@
 
     <!--Livre 19-->
     <figure>
-      <a href="https://www.amazon.fr/Bilqiss-Saphia-Azzeddine/dp/2234077966/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81eyYcanNOL.jpg" alt="Bilqiss" class="books" /></a>
+      <a href="https://www.amazon.fr/Bilqiss-Saphia-Azzeddine/dp/2234077966/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81eyYcanNOL.jpg" alt="Bilqiss"
+          class="books" /></a>
       <figcaption>
         Saphia Azzeddine
       </figcaption>
@@ -330,7 +332,8 @@
 
     <!--Livre 20-->
     <figure>
-      <a href="https://www.amazon.fr/Sa-m%C3%A8re-Saphia-Azzeddine/dp/2234081742/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71vCBTDzN5L.jpg" alt="Sa Mère" class="books" /></a>
+      <a href="https://www.amazon.fr/Sa-m%C3%A8re-Saphia-Azzeddine/dp/2234081742/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71vCBTDzN5L.jpg" alt="Sa Mère" class="books" /></a>
       <figcaption>
         Saphia Azzeddine
       </figcaption>
@@ -343,67 +346,71 @@
     </figure>
   </div>
 
-      <!--<div class="booksLine">
-Livre 21
+  <div class="booksLine">
+    <!--Livre 21-->
     <figure>
-      <a href="https://www.amazon.fr/Tendre-est-nuit-Scott-Fitzgerald/dp/2253052299/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=fitzgerald&qid=1555427512&s=gateway&sr=8-2" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/517sBNNkPyL.jpg" alt="Tendre Est La Nuit" class="books" /></a>
+      <a href="https://www.amazon.fr/L%C3%A9go%C3%AFste-romantique-Fr%C3%A9d%C3%A9ric-Beigbeder/dp/2253069051/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1555455126&sr=8-1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/719iBYfoccL.jpg" alt="L'Egoïste romantique" class="books" /></a>
       <figcaption>
-        Francis Scott Fitzgerald
+        Frédéric Beigbeder
       </figcaption>
       <figcaption>
-        Tendre est la nuit
+        L'Egoïste Romantique
       </figcaption>
       <figcaption>
-        7,20€
+        7,90€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 22
+    <!--Livre 22-->
     <figure>
-      <a href="https://www.amazon.fr/Combien-veux-tu-m%C3%A9pouser-Saphia-Azzeddine/dp/224680437X/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-5" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81RVBB8f9sL.jpg" alt="Combien veux-tu m'épouser ?" class="books" /></a>
+      <a href="https://www.amazon.fr/Vacances-dans-coma-Fr%C3%A9d%C3%A9ric-Beigbeder/dp/2253140708/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1555456266&sr=1-1-catcorr"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/718Y4sUo5qL.jpg" alt="Vacances dans le Coma" class="books" /></a>
       <figcaption>
-        Saphia Azzeddine
+        Frédéric Beigbeder
       </figcaption>
       <figcaption>
-        Combien veux-tu m'épouser ?
+        Vacannces dans le Coma
       </figcaption>
       <figcaption>
-        17,90€
+        6,70€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 23
+    <!--Livre 23-->
     <figure>
-      <a href="https://www.amazon.fr/Bilqiss-Saphia-Azzeddine/dp/2234077966/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81eyYcanNOL.jpg" alt="Bilqiss" class="books" /></a>
+      <a href="https://www.amazon.fr/Devenir-Michelle-Obama/dp/2213706115?ref_=Oct_MGiftedC_301061_4&pf_rd_r=1CJP6BYNGKZ9VTCP6DM6&pf_rd_p=e5b0b4bf-eca8-52d1-8616-3e2c263b1a1e&pf_rd_s=merchandised-search-8&pf_rd_t=101&pf_rd_i=301061&pf_rd_m=A1X6FK5RDHNB96" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81%2BNKIcEM-L.jpg" alt="Michelle Obama"
+          class="books" /></a>
       <figcaption>
-        Saphia Azzeddine
+        Michelle Obama
       </figcaption>
       <figcaption>
-        Bilqiss
+        Devenir
       </figcaption>
       <figcaption>
-        18,00€
+        24,50€
       </figcaption>
-    </figure>-->
+    </figure>
 
 
     <!--Livre 24
     <figure>
-      <a href="https://www.amazon.fr/Sa-m%C3%A8re-Saphia-Azzeddine/dp/2234081742/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71vCBTDzN5L.jpg" alt="Sa Mère" class="books" /></a>
+      <a href="https://www.amazon.fr/R%C3%AAves-mon-p%C3%A8re-Barack-OBAMA/dp/2258147948/ref=sr_1_3?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=obama&qid=1555456104&s=books&sr=1-3"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71RVcCARwNL.jpg" alt="Livre Obama" class="books" /></a>
       <figcaption>
-        Saphia Azzeddine
+        Barack Obama
       </figcaption>
       <figcaption>
-        Sa mère
+        Les rêves de mon père
       </figcaption>
       <figcaption>
-        19,00€
+        21,00€
       </figcaption>
     </figure>
-  </div>-->
+    -->
+  </div>
 
-    <!--<div class="booksLine">
+  <!--<div class="booksLine">
   Livre 25
     <figure>
       <a href="https://www.amazon.fr/Tendre-est-nuit-Scott-Fitzgerald/dp/2253052299/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=fitzgerald&qid=1555427512&s=gateway&sr=8-2" target="_blank"> <img
@@ -419,7 +426,7 @@ Livre 21
       </figcaption>
     </figure>-->
 
-    <!--Livre 26
+  <!--Livre 26
     <figure>
       <a href="https://www.amazon.fr/Combien-veux-tu-m%C3%A9pouser-Saphia-Azzeddine/dp/224680437X/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-5" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81RVBB8f9sL.jpg" alt="Combien veux-tu m'épouser ?" class="books" /></a>
       <figcaption>
@@ -433,7 +440,7 @@ Livre 21
       </figcaption>
     </figure>-->
 
-    <!--Livre 27
+  <!--Livre 27
     <figure>
       <a href="https://www.amazon.fr/Bilqiss-Saphia-Azzeddine/dp/2234077966/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81eyYcanNOL.jpg" alt="Bilqiss" class="books" /></a>
       <figcaption>
@@ -448,7 +455,7 @@ Livre 21
     </figure>
 -->
 
-    <!--Livre 28
+  <!--Livre 28
     <figure>
       <a href="https://www.amazon.fr/Sa-m%C3%A8re-Saphia-Azzeddine/dp/2234081742/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71vCBTDzN5L.jpg" alt="Sa Mère" class="books" /></a>
       <figcaption>
@@ -464,7 +471,7 @@ Livre 21
   </div>
   -->
 
-    <!--  <div class="booksLine">
+  <!--  <div class="booksLine">
 Livre 29
     <figure>
       <a href="https://www.amazon.fr/Tendre-est-nuit-Scott-Fitzgerald/dp/2253052299/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=fitzgerald&qid=1555427512&s=gateway&sr=8-2" target="_blank"> <img
@@ -481,7 +488,7 @@ Livre 29
     </figure>
     -->
 
-    <!--Livre 30
+  <!--Livre 30
     <figure>
       <a href="https://www.amazon.fr/Combien-veux-tu-m%C3%A9pouser-Saphia-Azzeddine/dp/224680437X/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-5" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81RVBB8f9sL.jpg" alt="Combien veux-tu m'épouser ?" class="books" /></a>
       <figcaption>
@@ -496,7 +503,7 @@ Livre 29
     </figure>
     -->
 
-    <!--Livre 31
+  <!--Livre 31
     <figure>
       <a href="https://www.amazon.fr/Bilqiss-Saphia-Azzeddine/dp/2234077966/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81eyYcanNOL.jpg" alt="Bilqiss" class="books" /></a>
       <figcaption>
@@ -511,7 +518,7 @@ Livre 29
     </figure>
 -->
 
-    <!--Livre 32
+  <!--Livre 32
     <figure>
       <a href="https://www.amazon.fr/Sa-m%C3%A8re-Saphia-Azzeddine/dp/2234081742/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71vCBTDzN5L.jpg" alt="Sa Mère" class="books" /></a>
       <figcaption>
@@ -527,7 +534,7 @@ Livre 29
   </div>
   -->
 
-    <!--  <div class="booksLine">
+  <!--  <div class="booksLine">
 Livre 33
     <figure>
       <a href="https://www.amazon.fr/Tendre-est-nuit-Scott-Fitzgerald/dp/2253052299/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=fitzgerald&qid=1555427512&s=gateway&sr=8-2" target="_blank"> <img
@@ -544,7 +551,7 @@ Livre 33
     </figure>
     -->
 
-    <!--Livre 34
+  <!--Livre 34
     <figure>
       <a href="https://www.amazon.fr/Combien-veux-tu-m%C3%A9pouser-Saphia-Azzeddine/dp/224680437X/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-5" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81RVBB8f9sL.jpg" alt="Combien veux-tu m'épouser ?" class="books" /></a>
       <figcaption>
@@ -559,7 +566,7 @@ Livre 33
     </figure>
     -->
 
-    <!--Livre 35
+  <!--Livre 35
     <figure>
       <a href="https://www.amazon.fr/Bilqiss-Saphia-Azzeddine/dp/2234077966/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81eyYcanNOL.jpg" alt="Bilqiss" class="books" /></a>
       <figcaption>
@@ -574,7 +581,7 @@ Livre 33
     </figure>
 -->
 
-    <!--Livre 36
+  <!--Livre 36
     <figure>
       <a href="https://www.amazon.fr/Sa-m%C3%A8re-Saphia-Azzeddine/dp/2234081742/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71vCBTDzN5L.jpg" alt="Sa Mère" class="books" /></a>
       <figcaption>
