--- a/autres.html
+++ b/autres.html
@@ -39,12 +39,12 @@
     <!--Autres 2-->
     <figure>
       <a href="https://www.amazon.fr/Esprits-criminels-Saison-Joe-Mantegna/dp/B07HSLVBVC/ref=zg_bs_409468_27?_encoding=UTF8&psc=1&refRID=5RWEYV0XDWDRY795M84Q" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/61AQaz9ykmL._SL1000_.jpg" alt="Esprit Criminels - Saison 4" class="others" /></a>
+          src="https://images-na.ssl-images-amazon.com/images/I/61AQaz9ykmL._SL1000_.jpg" alt="Esprit Criminels - Saison 13" class="others" /></a>
       <figcaption>
         Esprits Criminels
       </figcaption>
       <figcaption>
-        L'intégrale de la saison 14
+        L'intégrale de la saison 16
       </figcaption>
       <figcaption>
         23,66€
@@ -85,28 +85,29 @@
   </div>
 
   <div class="othersLine">
-    <!--Autres 5
+    <!--Autres 5-->
     <figure>
-      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <a href="https://shop.vitality.gg/products/casquette-team-vitality-1" target="_blank"> <img src="https://cdn.shopify.com/s/files/1/0049/2293/3366/products/2019-casquette-02_600x800.jpg?v=1550850258" alt="Casquette Vitality"
+          class="others" /></a>
       <figcaption>
-        Just cause 4
+        Casquette Vitality
       </figcaption>
       <figcaption>
-        28,97€
+        24,99€
       </figcaption>
     </figure>
--->
-    <!--Autres 6
+
+    <!--Autres 6-->
     <figure>
-      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <a href="https://shop.vitality.gg/products/porte-cles-team-vitality" target="_blank"> <img src="https://cdn.shopify.com/s/files/1/0049/2293/3366/products/portecle_600x800.jpg?v=1540291632" alt="Porte Clé Vitality" class="others" /></a>
       <figcaption>
-        Just cause 4
+        Porte Clé Vitality
       </figcaption>
       <figcaption>
-        28,97€
+        8,99€
       </figcaption>
     </figure>
--->
+
     <!--Autres 7
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
