--- a/livres.html
+++ b/livres.html
@@ -38,16 +38,16 @@
 
     <!--Livre 2-->
     <figure>
-      <a href="https://www.amazon.fr/habill%C3%A9-comme-monde-ressembles-personne/dp/2221219430/ref=sr_1_fkmrnull_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=cauet+t%27es&qid=1555280719&s=gateway&sr=8-1-fkmrnull" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/61O9rvvxjvL.jpg" alt="Livre Cauet" class="books" /></a>
+      <a href="https://www.amazon.fr/Devenir-Michelle-Obama/dp/2213706115?ref_=Oct_MGiftedC_301061_4&pf_rd_r=1CJP6BYNGKZ9VTCP6DM6&pf_rd_p=e5b0b4bf-eca8-52d1-8616-3e2c263b1a1e&pf_rd_s=merchandised-search-8&pf_rd_t=101&pf_rd_i=301061&pf_rd_m=A1X6FK5RDHNB96" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81%2BNKIcEM-L.jpg" alt="Michelle Obama"
+          class="books" /></a>
       <figcaption>
-        Cauet
+        Michelle Obama
       </figcaption>
       <figcaption>
-        T'es habillé comme...
+        Devenir
       </figcaption>
       <figcaption>
-        20,00€
+        24,50€
       </figcaption>
     </figure>
 
@@ -377,7 +377,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 23-->
+    <!--Livre 23
     <figure>
       <a href="https://www.amazon.fr/Devenir-Michelle-Obama/dp/2213706115?ref_=Oct_MGiftedC_301061_4&pf_rd_r=1CJP6BYNGKZ9VTCP6DM6&pf_rd_p=e5b0b4bf-eca8-52d1-8616-3e2c263b1a1e&pf_rd_s=merchandised-search-8&pf_rd_t=101&pf_rd_i=301061&pf_rd_m=A1X6FK5RDHNB96" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81%2BNKIcEM-L.jpg" alt="Michelle Obama"
           class="books" /></a>
@@ -390,7 +390,7 @@
       <figcaption>
         24,50€
       </figcaption>
-    </figure>
+    </figure>-->
 
 
     <!--Livre 24
