--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -75,13 +75,13 @@
   <div class="gamesLine">
     <!--Jeu 5-->
     <figure>
-      <a href="https://www.amazon.fr/ACTIVISION-Sekiro-Shadows-Die-Twice/dp/B07DTMYYH3/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=sekiro&qid=1554820398&s=videogames&sr=1-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/71AdXV-YtfL._SL1000_.jpg" alt="Sekiro: Shadows Die Twice" class="game" /></a>
+      <a href="https://www.amazon.fr/Shadow-of-the-Tomb-Raider/dp/B07H9W8CPC/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1C97HT7NS6MQB&keywords=shadow+of+the+tomb+raider+ps4&qid=1554820457&s=videogames&sprefix=shadow%2Cvideogames%2C138&sr=1-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71XoFWzXBBL._SL1492_.jpg" alt="Shadow of the Tomb Raider" class="game" /></a>
       <figcaption>
-        Sekiro Shadows Die Twice
+        Shadow of the Tomb Raider
       </figcaption>
       <figcaption>
-        28,97€
+        34,80€
       </figcaption>
     </figure>
 
@@ -108,7 +108,7 @@
       </figcaption>
     </figure>
 
-    <!--Jeu 8-->
+    <!--Jeu 8
     <figure>
       <a href="https://www.amazon.fr/Shadow-of-the-Tomb-Raider/dp/B07H9W8CPC/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1C97HT7NS6MQB&keywords=shadow+of+the+tomb+raider+ps4&qid=1554820457&s=videogames&sprefix=shadow%2Cvideogames%2C138&sr=1-1"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71XoFWzXBBL._SL1492_.jpg" alt="Shadow of the Tomb Raider" class="game" /></a>
@@ -118,7 +118,7 @@
       <figcaption>
         34,80€
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <!--
