--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -28,7 +28,10 @@
         Just cause 4
       </figcaption>
       <figcaption>
-        28,97€
+        28,97€ sur Amazon
+      </figcaption>
+      <figcaption>
+        28,97€ sur PlayStation
       </figcaption>
     </figure>
 
@@ -41,6 +44,9 @@
       </figcaption>
       <figcaption>
         29,99€
+      </figcaption>
+      <figcaption>
+        28,97€ sur PlayStation
       </figcaption>
       <figcaption>
         Sortie le 21 juin
@@ -57,6 +63,9 @@
       <figcaption>
         38,89€
       </figcaption>
+      <figcaption>
+        28,97€ sur PlayStation
+      </figcaption>
     </figure>
 
     <!--Jeu 4-->
@@ -68,6 +77,9 @@
       </figcaption>
       <figcaption>
         44,99€
+      </figcaption>
+      <figcaption>
+        28,97€ sur PlayStation
       </figcaption>
     </figure>
   </div>
@@ -83,6 +95,9 @@
       <figcaption>
         34,80€
       </figcaption>
+      <figcaption>
+        28,97€ sur PlayStation
+      </figcaption>
     </figure>
 
     <!--Jeu 6-->
@@ -95,6 +110,9 @@
       <figcaption>
         39,90€
       </figcaption>
+      <figcaption>
+        28,97€ sur PlayStation
+      </figcaption>
     </figure>
 
     <!--Jeu 7-->
@@ -105,6 +123,9 @@
       </figcaption>
       <figcaption>
         PSN : 39,99€
+      </figcaption>
+      <figcaption>
+        28,97€ sur PlayStation
       </figcaption>
     </figure>
 
