--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -23,15 +23,16 @@
   <div class="gamesLine">
     <!--Jeu 1-->
     <figure>
-      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+      <a href="https://www.amazon.fr/Square-Enix-SQEA27-UK-22ST-Just-Cause/dp/B07DNY1KPK/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=just+cause+4&qid=1556021586&s=videogames&sr=1-2" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
       <figcaption>
         Just cause 4
       </figcaption>
       <figcaption>
-        28,97€ sur Amazon
+        28,49€ sur Amazon
       </figcaption>
       <figcaption>
-        28,97€ sur PlayStation
+        69,99€ sur PlayStation
       </figcaption>
     </figure>
 
@@ -43,10 +44,10 @@
         Crash Team Racing
       </figcaption>
       <figcaption>
-        29,99€
+        29,99€ sur Amazon
       </figcaption>
       <figcaption>
-        28,97€ sur PlayStation
+        39,99€ (avec bonus) sur PlayStation
       </figcaption>
       <figcaption>
         Sortie le 21 juin
@@ -61,10 +62,10 @@
         Tekken 7
       </figcaption>
       <figcaption>
-        38,89€
+        RDS sur Amazon
       </figcaption>
       <figcaption>
-        28,97€ sur PlayStation
+        49,99€ sur PlayStation
       </figcaption>
     </figure>
 
@@ -76,10 +77,10 @@
         Red Dead Redemption 2
       </figcaption>
       <figcaption>
-        44,99€
+        37,90€ sur Amazon
       </figcaption>
       <figcaption>
-        28,97€ sur PlayStation
+        44,79€ sur PlayStation
       </figcaption>
     </figure>
   </div>
@@ -93,10 +94,10 @@
         Shadow of the Tomb Raider
       </figcaption>
       <figcaption>
-        34,80€
+        27,05€ sur Amazon
       </figcaption>
       <figcaption>
-        28,97€ sur PlayStation
+        69,99€ sur PlayStation
       </figcaption>
     </figure>
 
@@ -108,10 +109,10 @@
         God Of War
       </figcaption>
       <figcaption>
-        39,90€
+        39,90€ sur Amazon
       </figcaption>
       <figcaption>
-        28,97€ sur PlayStation
+        39,99€ sur PlayStation
       </figcaption>
     </figure>
 
@@ -122,22 +123,22 @@
         Life is Strange 2
       </figcaption>
       <figcaption>
-        PSN : 39,99€
-      </figcaption>
-      <figcaption>
-        28,97€ sur PlayStation
+        39,99€ sur PlayStation
       </figcaption>
     </figure>
 
     <!--Jeu 8
     <figure>
-      <a href="https://www.amazon.fr/Shadow-of-the-Tomb-Raider/dp/B07H9W8CPC/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1C97HT7NS6MQB&keywords=shadow+of+the+tomb+raider+ps4&qid=1554820457&s=videogames&sprefix=shadow%2Cvideogames%2C138&sr=1-1"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71XoFWzXBBL._SL1492_.jpg" alt="Shadow of the Tomb Raider" class="game" /></a>
+      <a href="https://www.amazon.fr/Ubisoft-3307216063896-Assassins-Creed-Odyssey/dp/B07DQ9PVZG/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=18SYSU8KLSBT5&keywords=assassin%27s+creed+odyssey&qid=1556022162&s=videogames&sprefix=assa%2Cvideogames%2C140&sr=1-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71EMIz9BbNL._SL1000_.jpg" alt="Assassin's Creed Odyssey" class="game" /></a>
       <figcaption>
-        Shadow of the Tomb Raider
+        Assassin's Creed Odyssey
       </figcaption>
       <figcaption>
-        34,80€
+        34,99€ sur Amazon
+      </figcaption>
+      <figcaption>
+        35,74€ sur PlayStation
       </figcaption>
     </figure>-->
   </div>
