--- a/autres.html
+++ b/autres.html
@@ -108,17 +108,17 @@
       </figcaption>
     </figure>
 
-    <!--Autres 7
+    <!--Autres 7-->
     <figure>
-      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <a href="https://cheh-moman.niceshop.co/product/Accessoires/Mug/Mug-China-Number-One/5cb49c34839e400010e596d7" target="_blank"> <img src="https://s3.eu-central-1.amazonaws.com/balibart-s3/Products/5cb49c34839e400010e596d7/Mockups/custom.png" alt="Tasse Moman" class="others" /></a>
       <figcaption>
-        Just cause 4
+        Tasse Moman
       </figcaption>
       <figcaption>
-        28,97€
+        14,99€
       </figcaption>
     </figure>
--->
+
     <!--Autres 8
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
