--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -47,7 +47,7 @@
         29,99€ sur Amazon
       </figcaption>
       <figcaption>
-        39,99€ (avec bonus) sur PlayStation
+        39,99€ (+ bonus) sur PlayStation
       </figcaption>
       <figcaption>
         Sortie le 21 juin
@@ -127,20 +127,20 @@
       </figcaption>
     </figure>
 
-    <!--Jeu 8
+    <!--Jeu 8-->
     <figure>
-      <a href="https://www.amazon.fr/Ubisoft-3307216063896-Assassins-Creed-Odyssey/dp/B07DQ9PVZG/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=18SYSU8KLSBT5&keywords=assassin%27s+creed+odyssey&qid=1556022162&s=videogames&sprefix=assa%2Cvideogames%2C140&sr=1-1"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71EMIz9BbNL._SL1000_.jpg" alt="Assassin's Creed Odyssey" class="game" /></a>
+      <a href="https://www.amazon.fr/Sony-Days-Gone/dp/B07MWXG7QV/ref=pd_sbs_63_5/257-1218540-6150940?_encoding=UTF8&pd_rd_i=B07MWXG7QV&pd_rd_r=6034b639-6d27-11e9-b7ed-b1ecbd8ebec9&pd_rd_w=9QfFb&pd_rd_wg=jHvSS&pf_rd_p=ce0bf35d-908d-4dcb-a083-3a6e21394b79&pf_rd_r=5J97VAA2ZG5TABRB0ZK5&psc=1&refRID=5J97VAA2ZG5TABRB0ZK5"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71m2fi%2BfmHL._SL1000_.jpg" alt="Days Gone" class="game" /></a>
       <figcaption>
-        Assassin's Creed Odyssey
+        Days Gone
       </figcaption>
       <figcaption>
-        34,99€ sur Amazon
+        RDS sur Amazon
       </figcaption>
       <figcaption>
-        35,74€ sur PlayStation
+        69,99€ sur PlayStation
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <!--
