--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -56,16 +56,16 @@
 
     <!--Jeu 3-->
     <figure>
-      <a href="https://www.amazon.fr/Bandai-Namco-Entertainment-3391891990943-Tekken/dp/B01N6UNSR8/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=tekken+7&qid=1554820374&s=videogames&sr=1-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/71A1Ixn9evL._SL1000_.jpg" alt="Tekken 7" class="game" /></a>
+      <a href="https://www.amazon.fr/Sony-Days-Gone/dp/B07MWXG7QV/ref=pd_sbs_63_5/257-1218540-6150940?_encoding=UTF8&pd_rd_i=B07MWXG7QV&pd_rd_r=6034b639-6d27-11e9-b7ed-b1ecbd8ebec9&pd_rd_w=9QfFb&pd_rd_wg=jHvSS&pf_rd_p=ce0bf35d-908d-4dcb-a083-3a6e21394b79&pf_rd_r=5J97VAA2ZG5TABRB0ZK5&psc=1&refRID=5J97VAA2ZG5TABRB0ZK5"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71m2fi%2BfmHL._SL1000_.jpg" alt="Days Gone" class="game" /></a>
       <figcaption>
-        Tekken 7
+        Days Gone
       </figcaption>
       <figcaption>
-        29,99€ sur Amazon
+        RDS sur Amazon
       </figcaption>
       <figcaption>
-        17,99€ sur PlayStation
+        69,99€ sur PlayStation
       </figcaption>
     </figure>
 
@@ -127,7 +127,7 @@
       </figcaption>
     </figure>
 
-    <!--Jeu 8-->
+    <!--Jeu 8
     <figure>
       <a href="https://www.amazon.fr/Sony-Days-Gone/dp/B07MWXG7QV/ref=pd_sbs_63_5/257-1218540-6150940?_encoding=UTF8&pd_rd_i=B07MWXG7QV&pd_rd_r=6034b639-6d27-11e9-b7ed-b1ecbd8ebec9&pd_rd_w=9QfFb&pd_rd_wg=jHvSS&pf_rd_p=ce0bf35d-908d-4dcb-a083-3a6e21394b79&pf_rd_r=5J97VAA2ZG5TABRB0ZK5&psc=1&refRID=5J97VAA2ZG5TABRB0ZK5"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71m2fi%2BfmHL._SL1000_.jpg" alt="Days Gone" class="game" /></a>
@@ -140,7 +140,7 @@
       <figcaption>
         69,99€ sur PlayStation
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <!--
