--- a/livres.html
+++ b/livres.html
@@ -38,8 +38,8 @@
 
     <!--Livre 2-->
     <figure>
-      <a href="https://www.amazon.fr/Devenir-Michelle-Obama/dp/2213706115?ref_=Oct_MGiftedC_301061_4&pf_rd_r=1CJP6BYNGKZ9VTCP6DM6&pf_rd_p=e5b0b4bf-eca8-52d1-8616-3e2c263b1a1e&pf_rd_s=merchandised-search-8&pf_rd_t=101&pf_rd_i=301061&pf_rd_m=A1X6FK5RDHNB96" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81%2BNKIcEM-L.jpg" alt="Michelle Obama"
-          class="books" /></a>
+      <a href="https://www.amazon.fr/Devenir-Michelle-Obama/dp/2213706115?ref_=Oct_MGiftedC_301061_4&pf_rd_r=1CJP6BYNGKZ9VTCP6DM6&pf_rd_p=e5b0b4bf-eca8-52d1-8616-3e2c263b1a1e&pf_rd_s=merchandised-search-8&pf_rd_t=101&pf_rd_i=301061&pf_rd_m=A1X6FK5RDHNB96"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81%2BNKIcEM-L.jpg" alt="Michelle Obama" class="books" /></a>
       <figcaption>
         Michelle Obama
       </figcaption>
@@ -364,13 +364,13 @@
 
     <!--Livre 22-->
     <figure>
-      <a href="https://www.amazon.fr/Vacances-dans-coma-Fr%C3%A9d%C3%A9ric-Beigbeder/dp/2253140708/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1555456266&sr=1-1-catcorr"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/718Y4sUo5qL.jpg" alt="Vacances dans le Coma" class="books" /></a>
+      <a href="https://www.amazon.fr/Vacances-dans-coma-Fr%C3%A9d%C3%A9ric-Beigbeder/dp/2253140708/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1555456266&sr=1-1-catcorr" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/718Y4sUo5qL.jpg" alt="Vacances dans le Coma" class="books" /></a>
       <figcaption>
         Frédéric Beigbeder
       </figcaption>
       <figcaption>
-        Vacannces dans le Coma
+        Vacances dans le Coma
       </figcaption>
       <figcaption>
         6,70€
@@ -379,8 +379,8 @@
 
     <!--Livre 23-->
     <figure>
-      <a href="https://www.amazon.fr/Narthex-Marien-Defalvard/dp/2912969751/ref=sr_1_fkmrnull_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1CV3OFUXP4CZH&keywords=marien+defalvard&qid=1556834799&s=gateway&sprefix=marien+d%2Cvideogames%2C136&sr=8-2-fkmrnull" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/41W9LcfYRCL.jpg" alt="Defalvard"
-          class="books" /></a>
+      <a href="https://www.amazon.fr/Narthex-Marien-Defalvard/dp/2912969751/ref=sr_1_fkmrnull_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1CV3OFUXP4CZH&keywords=marien+defalvard&qid=1556834799&s=gateway&sprefix=marien+d%2Cvideogames%2C136&sr=8-2-fkmrnull"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/41W9LcfYRCL.jpg" alt="Defalvard" class="books" /></a>
       <figcaption>
         Marien Defalvard
       </figcaption>
@@ -393,24 +393,23 @@
     </figure>
 
 
-    <!--Livre 24
+    <!--Livre 24-->
     <figure>
-      <a href="https://www.amazon.fr/R%C3%AAves-mon-p%C3%A8re-Barack-OBAMA/dp/2258147948/ref=sr_1_3?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=obama&qid=1555456104&s=books&sr=1-3"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71RVcCARwNL.jpg" alt="Livre Obama" class="books" /></a>
+      <a href="https://www.amazon.fr/Gatsby-Magnifique-Francis-Scott-Fitzgerald/dp/2253176729/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=&sr="
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/8132pcuCidL.jpg" alt="Gatsby" class="books" /></a>
       <figcaption>
-        Barack Obama
+        Francis Scott Fitzgerald
       </figcaption>
       <figcaption>
-        Les rêves de mon père
+        Gatsby le Magnifique
       </figcaption>
       <figcaption>
-        21,00€
+        2,80€
       </figcaption>
     </figure>
-    -->
   </div>
 
-  <!--<div class="booksLine">
+    <!--<div class="booksLine">
   Livre 25
     <figure>
       <a href="https://www.amazon.fr/Tendre-est-nuit-Scott-Fitzgerald/dp/2253052299/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=fitzgerald&qid=1555427512&s=gateway&sr=8-2" target="_blank"> <img
@@ -426,7 +425,7 @@
       </figcaption>
     </figure>-->
 
-  <!--Livre 26
+    <!--Livre 26
     <figure>
       <a href="https://www.amazon.fr/Combien-veux-tu-m%C3%A9pouser-Saphia-Azzeddine/dp/224680437X/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-5" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81RVBB8f9sL.jpg" alt="Combien veux-tu m'épouser ?" class="books" /></a>
       <figcaption>
@@ -440,7 +439,7 @@
       </figcaption>
     </figure>-->
 
-  <!--Livre 27
+    <!--Livre 27
     <figure>
       <a href="https://www.amazon.fr/Bilqiss-Saphia-Azzeddine/dp/2234077966/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81eyYcanNOL.jpg" alt="Bilqiss" class="books" /></a>
       <figcaption>
@@ -455,7 +454,7 @@
     </figure>
 -->
 
-  <!--Livre 28
+    <!--Livre 28
     <figure>
       <a href="https://www.amazon.fr/Sa-m%C3%A8re-Saphia-Azzeddine/dp/2234081742/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71vCBTDzN5L.jpg" alt="Sa Mère" class="books" /></a>
       <figcaption>
@@ -471,7 +470,7 @@
   </div>
   -->
 
-  <!--  <div class="booksLine">
+    <!--  <div class="booksLine">
 Livre 29
     <figure>
       <a href="https://www.amazon.fr/Tendre-est-nuit-Scott-Fitzgerald/dp/2253052299/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=fitzgerald&qid=1555427512&s=gateway&sr=8-2" target="_blank"> <img
@@ -488,7 +487,7 @@ Livre 29
     </figure>
     -->
 
-  <!--Livre 30
+    <!--Livre 30
     <figure>
       <a href="https://www.amazon.fr/Combien-veux-tu-m%C3%A9pouser-Saphia-Azzeddine/dp/224680437X/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-5" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81RVBB8f9sL.jpg" alt="Combien veux-tu m'épouser ?" class="books" /></a>
       <figcaption>
@@ -503,7 +502,7 @@ Livre 29
     </figure>
     -->
 
-  <!--Livre 31
+    <!--Livre 31
     <figure>
       <a href="https://www.amazon.fr/Bilqiss-Saphia-Azzeddine/dp/2234077966/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81eyYcanNOL.jpg" alt="Bilqiss" class="books" /></a>
       <figcaption>
@@ -518,7 +517,7 @@ Livre 29
     </figure>
 -->
 
-  <!--Livre 32
+    <!--Livre 32
     <figure>
       <a href="https://www.amazon.fr/Sa-m%C3%A8re-Saphia-Azzeddine/dp/2234081742/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71vCBTDzN5L.jpg" alt="Sa Mère" class="books" /></a>
       <figcaption>
@@ -534,7 +533,7 @@ Livre 29
   </div>
   -->
 
-  <!--  <div class="booksLine">
+    <!--  <div class="booksLine">
 Livre 33
     <figure>
       <a href="https://www.amazon.fr/Tendre-est-nuit-Scott-Fitzgerald/dp/2253052299/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=fitzgerald&qid=1555427512&s=gateway&sr=8-2" target="_blank"> <img
@@ -551,7 +550,7 @@ Livre 33
     </figure>
     -->
 
-  <!--Livre 34
+    <!--Livre 34
     <figure>
       <a href="https://www.amazon.fr/Combien-veux-tu-m%C3%A9pouser-Saphia-Azzeddine/dp/224680437X/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-5" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81RVBB8f9sL.jpg" alt="Combien veux-tu m'épouser ?" class="books" /></a>
       <figcaption>
@@ -566,7 +565,7 @@ Livre 33
     </figure>
     -->
 
-  <!--Livre 35
+    <!--Livre 35
     <figure>
       <a href="https://www.amazon.fr/Bilqiss-Saphia-Azzeddine/dp/2234077966/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81eyYcanNOL.jpg" alt="Bilqiss" class="books" /></a>
       <figcaption>
@@ -581,7 +580,7 @@ Livre 33
     </figure>
 -->
 
-  <!--Livre 36
+    <!--Livre 36
     <figure>
       <a href="https://www.amazon.fr/Sa-m%C3%A8re-Saphia-Azzeddine/dp/2234081742/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71vCBTDzN5L.jpg" alt="Sa Mère" class="books" /></a>
       <figcaption>
