--- a/livres.html
+++ b/livres.html
@@ -379,22 +379,6 @@
 
     <!--Livre 23-->
     <figure>
-      <a href="https://www.amazon.fr/Narthex-Marien-Defalvard/dp/2912969751/ref=sr_1_fkmrnull_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1CV3OFUXP4CZH&keywords=marien+defalvard&qid=1556834799&s=gateway&sprefix=marien+d%2Cvideogames%2C136&sr=8-2-fkmrnull"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/41W9LcfYRCL.jpg" alt="Defalvard" class="books" /></a>
-      <figcaption>
-        Marien Defalvard
-      </figcaption>
-      <figcaption>
-        Narthex
-      </figcaption>
-      <figcaption>
-        20,00€
-      </figcaption>
-    </figure>
-
-
-    <!--Livre 24-->
-    <figure>
       <a href="https://www.amazon.fr/Gatsby-Magnifique-Francis-Scott-Fitzgerald/dp/2253176729/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=&sr="
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/8132pcuCidL.jpg" alt="Gatsby" class="books" /></a>
       <figcaption>
@@ -407,7 +391,25 @@
         2,80€
       </figcaption>
     </figure>
+
+
+    <!--Livre 24
+    <figure>
+      <a href="https://www.amazon.fr/Narthex-Marien-Defalvard/dp/2912969751/ref=sr_1_fkmrnull_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1CV3OFUXP4CZH&keywords=marien+defalvard&qid=1556834799&s=gateway&sprefix=marien+d%2Cvideogames%2C136&sr=8-2-fkmrnull"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/41W9LcfYRCL.jpg" alt="Defalvard" class="books" /></a>
+      <figcaption>
+        Marien Defalvard
+      </figcaption>
+      <figcaption>
+        Narthex
+      </figcaption>
+      <figcaption>
+        20,00€
+      </figcaption>
+    </figure>-->
   </div>
+
+
 
     <!--<div class="booksLine">
   Livre 25
