--- a/autres.html
+++ b/autres.html
@@ -47,7 +47,7 @@
         L'intégrale de la saison 16
       </figcaption>
       <figcaption>
-        23,99€
+        20,99€
       </figcaption>
     </figure>
 
@@ -110,7 +110,8 @@
 
     <!--Autres 7-->
     <figure>
-      <a href="https://cheh-moman.niceshop.co/product/Accessoires/Mug/Mug-China-Number-One/5cb49c34839e400010e596d7" target="_blank"> <img src="https://s3.eu-central-1.amazonaws.com/balibart-s3/Products/5cb49c34839e400010e596d7/Mockups/custom.png" alt="Tasse Moman" class="others" /></a>
+      <a href="https://cheh-moman.niceshop.co/product/Accessoires/Mug/Mug-China-Number-One/5cb49c34839e400010e596d7" target="_blank"> <img src="https://s3.eu-central-1.amazonaws.com/balibart-s3/Products/5cb49c34839e400010e596d7/Mockups/custom.png"
+          alt="Tasse Moman" class="others" /></a>
       <figcaption>
         Tasse Moman
       </figcaption>
@@ -119,17 +120,20 @@
       </figcaption>
     </figure>
 
-    <!--Autres 8
+    <!--Autres 8-->
     <figure>
-      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <a href="https://www.amazon.fr/Heures-sombres-Blu-ray-Digital/dp/B07995WLYK/ref=tmm_blu_title_0?_encoding=UTF8&amp;qid=&amp;sr=" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71XjGQ9iIVL._SL1290_.jpg"
+          alt="Les Heures Sombres" class="others" /></a>
       <figcaption>
-        Just cause 4
+        Les Heures Sombres
       </figcaption>
       <figcaption>
-        28,97€
+        Blu Ray
+      </figcaption>
+      <figcaption>
+        10,99€
       </figcaption>
     </figure>
-    -->
   </div>
 
   <div class="othersLine">
