--- a/livres.html
+++ b/livres.html
@@ -329,7 +329,6 @@
       </figcaption>
     </figure>
 
-
     <!--Livre 20-->
     <figure>
       <a href="https://www.amazon.fr/Sa-m%C3%A8re-Saphia-Azzeddine/dp/2234081742/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-1"
@@ -379,8 +378,8 @@
 
     <!--Livre 23-->
     <figure>
-      <a href="https://www.amazon.fr/Gatsby-Magnifique-Francis-Scott-Fitzgerald/dp/2253176729/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=&sr="
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/8132pcuCidL.jpg" alt="Gatsby" class="books" /></a>
+      <a href="https://www.amazon.fr/Gatsby-Magnifique-Francis-Scott-Fitzgerald/dp/2253176729/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=&sr=" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/8132pcuCidL.jpg" alt="Gatsby"
+          class="books" /></a>
       <figcaption>
         Francis Scott Fitzgerald
       </figcaption>
@@ -392,8 +391,7 @@
       </figcaption>
     </figure>
 
-
-    <!--Livre 24
+    <!--Livre 24-->
     <figure>
       <a href="https://www.amazon.fr/Narthex-Marien-Defalvard/dp/2912969751/ref=sr_1_fkmrnull_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1CV3OFUXP4CZH&keywords=marien+defalvard&qid=1556834799&s=gateway&sprefix=marien+d%2Cvideogames%2C136&sr=8-2-fkmrnull"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/41W9LcfYRCL.jpg" alt="Defalvard" class="books" /></a>
@@ -406,12 +404,10 @@
       <figcaption>
         20,00€
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
-
-
-    <!--<div class="booksLine">
+  <!--<div class="booksLine">
   Livre 25
     <figure>
       <a href="https://www.amazon.fr/Tendre-est-nuit-Scott-Fitzgerald/dp/2253052299/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=fitzgerald&qid=1555427512&s=gateway&sr=8-2" target="_blank"> <img
@@ -427,7 +423,7 @@
       </figcaption>
     </figure>-->
 
-    <!--Livre 26
+  <!--Livre 26
     <figure>
       <a href="https://www.amazon.fr/Combien-veux-tu-m%C3%A9pouser-Saphia-Azzeddine/dp/224680437X/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-5" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81RVBB8f9sL.jpg" alt="Combien veux-tu m'épouser ?" class="books" /></a>
       <figcaption>
@@ -441,7 +437,7 @@
       </figcaption>
     </figure>-->
 
-    <!--Livre 27
+  <!--Livre 27
     <figure>
       <a href="https://www.amazon.fr/Bilqiss-Saphia-Azzeddine/dp/2234077966/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81eyYcanNOL.jpg" alt="Bilqiss" class="books" /></a>
       <figcaption>
@@ -456,7 +452,7 @@
     </figure>
 -->
 
-    <!--Livre 28
+  <!--Livre 28
     <figure>
       <a href="https://www.amazon.fr/Sa-m%C3%A8re-Saphia-Azzeddine/dp/2234081742/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71vCBTDzN5L.jpg" alt="Sa Mère" class="books" /></a>
       <figcaption>
@@ -472,7 +468,7 @@
   </div>
   -->
 
-    <!--  <div class="booksLine">
+  <!--  <div class="booksLine">
 Livre 29
     <figure>
       <a href="https://www.amazon.fr/Tendre-est-nuit-Scott-Fitzgerald/dp/2253052299/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=fitzgerald&qid=1555427512&s=gateway&sr=8-2" target="_blank"> <img
@@ -489,7 +485,7 @@ Livre 29
     </figure>
     -->
 
-    <!--Livre 30
+  <!--Livre 30
     <figure>
       <a href="https://www.amazon.fr/Combien-veux-tu-m%C3%A9pouser-Saphia-Azzeddine/dp/224680437X/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-5" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81RVBB8f9sL.jpg" alt="Combien veux-tu m'épouser ?" class="books" /></a>
       <figcaption>
@@ -504,7 +500,7 @@ Livre 29
     </figure>
     -->
 
-    <!--Livre 31
+  <!--Livre 31
     <figure>
       <a href="https://www.amazon.fr/Bilqiss-Saphia-Azzeddine/dp/2234077966/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81eyYcanNOL.jpg" alt="Bilqiss" class="books" /></a>
       <figcaption>
@@ -519,7 +515,7 @@ Livre 29
     </figure>
 -->
 
-    <!--Livre 32
+  <!--Livre 32
     <figure>
       <a href="https://www.amazon.fr/Sa-m%C3%A8re-Saphia-Azzeddine/dp/2234081742/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71vCBTDzN5L.jpg" alt="Sa Mère" class="books" /></a>
       <figcaption>
@@ -535,7 +531,7 @@ Livre 29
   </div>
   -->
 
-    <!--  <div class="booksLine">
+  <!--  <div class="booksLine">
 Livre 33
     <figure>
       <a href="https://www.amazon.fr/Tendre-est-nuit-Scott-Fitzgerald/dp/2253052299/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=fitzgerald&qid=1555427512&s=gateway&sr=8-2" target="_blank"> <img
@@ -552,7 +548,7 @@ Livre 33
     </figure>
     -->
 
-    <!--Livre 34
+  <!--Livre 34
     <figure>
       <a href="https://www.amazon.fr/Combien-veux-tu-m%C3%A9pouser-Saphia-Azzeddine/dp/224680437X/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-5" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81RVBB8f9sL.jpg" alt="Combien veux-tu m'épouser ?" class="books" /></a>
       <figcaption>
@@ -567,7 +563,7 @@ Livre 33
     </figure>
     -->
 
-    <!--Livre 35
+  <!--Livre 35
     <figure>
       <a href="https://www.amazon.fr/Bilqiss-Saphia-Azzeddine/dp/2234077966/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81eyYcanNOL.jpg" alt="Bilqiss" class="books" /></a>
       <figcaption>
@@ -582,7 +578,7 @@ Livre 33
     </figure>
 -->
 
-    <!--Livre 36
+  <!--Livre 36
     <figure>
       <a href="https://www.amazon.fr/Sa-m%C3%A8re-Saphia-Azzeddine/dp/2234081742/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71vCBTDzN5L.jpg" alt="Sa Mère" class="books" /></a>
       <figcaption>
