--- a/autres.html
+++ b/autres.html
@@ -137,28 +137,42 @@
   </div>
 
   <div class="othersLine">
-    <!--Autres 9
+    <!--Autres 9-->
     <figure>
-      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <a href="#" target="_blank"> <img src="https://via.placeholder.com/200x250"
+          alt="Game of Thrones" class="others" /></a>
       <figcaption>
-        Just cause 4
+        Game of Thrones
       </figcaption>
       <figcaption>
-        28,97€
+        L'intégrale des 8 saisons
+      </figcaption>
+      <figcaption>
+        Blu Ray
+      </figcaption>
+      <figcaption>
+        Pas encore sorti
       </figcaption>
     </figure>
--->
-    <!--Autres 10
+
+    <!--Autres 10-->
     <figure>
-      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <a href="#" target="_blank"> <img src="https://via.placeholder.com/200x250"
+          alt="Big Bang Theory" class="others" /></a>
       <figcaption>
-        Just cause 4
+        The Big Bang Theory
       </figcaption>
       <figcaption>
-        28,97€
+        L'intégrale des 12 saisons
+      </figcaption>
+      <figcaption>
+        Blu Ray
+      </figcaption>
+      <figcaption>
+        Pas encore sorti
       </figcaption>
     </figure>
--->
+
     <!--Autres 11
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
