--- a/autres.html
+++ b/autres.html
@@ -139,8 +139,7 @@
   <div class="othersLine">
     <!--Autres 9-->
     <figure>
-      <a href="#" target="_blank"> <img src="https://via.placeholder.com/200x250"
-          alt="Game of Thrones" class="others" /></a>
+      <a href="#" target="_blank"> <img src="https://via.placeholder.com/200x250" alt="Game of Thrones" class="others" /></a>
       <figcaption>
         Game of Thrones
       </figcaption>
@@ -157,8 +156,7 @@
 
     <!--Autres 10-->
     <figure>
-      <a href="#" target="_blank"> <img src="https://via.placeholder.com/200x250"
-          alt="Big Bang Theory" class="others" /></a>
+      <a href="#" target="_blank"> <img src="https://via.placeholder.com/200x250" alt="Big Bang Theory" class="others" /></a>
       <figcaption>
         The Big Bang Theory
       </figcaption>
@@ -173,17 +171,18 @@
       </figcaption>
     </figure>
 
-    <!--Autres 11
+    <!--Autres 11-->
     <figure>
-      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <a href="https://www.amazon.fr/Monopoly-societe-Thrones-Collector-fran%C3%A7aise/dp/B07MV1NS8Z/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3LRZVONKUAQH0&keywords=game+of+thrones+monopoly&qid=1558896777&s=gateway&sprefix=game+of+thrones+mo%2Caps%2C139&sr=8-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81gMNMqzTmL._SL1500_.jpg" alt="Monopoly GoT" class="others" /></a>
       <figcaption>
-        Just cause 4
+        Monopoly GoT
       </figcaption>
       <figcaption>
-        28,97€
+        27,99€
       </figcaption>
     </figure>
--->
+
     <!--Autres 12
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
