--- a/livres.html
+++ b/livres.html
@@ -408,7 +408,7 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 25
+    <!--Livre 25-->
     <figure>
       <a href="https://www.amazon.fr/Retour-%C3%A0-Birkenau-Ginette-Kolinka/dp/2246820707?ref_=Oct_NReleaseC_301061_6&pf_rd_r=4DW69VZ12YWBZ8SAMD7G&pf_rd_p=e5b0b4bf-eca8-52d1-8616-3e2c263b1a1e&pf_rd_s=merchandised-search-8&pf_rd_t=101&pf_rd_i=301061&pf_rd_m=A1X6FK5RDHNB96"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71Jq5smX3LL.jpg" alt="Retour à Birkenau" class="books" /></a>
@@ -421,7 +421,7 @@
       <figcaption>
         13,00€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 26
     <figure>
