--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -127,20 +127,23 @@
       </figcaption>
     </figure>
 
-    <!--Jeu 8
+    <!--Jeu 8-->
     <figure>
-      <a href="https://www.amazon.fr/Sony-Days-Gone/dp/B07MWXG7QV/ref=pd_sbs_63_5/257-1218540-6150940?_encoding=UTF8&pd_rd_i=B07MWXG7QV&pd_rd_r=6034b639-6d27-11e9-b7ed-b1ecbd8ebec9&pd_rd_w=9QfFb&pd_rd_wg=jHvSS&pf_rd_p=ce0bf35d-908d-4dcb-a083-3a6e21394b79&pf_rd_r=5J97VAA2ZG5TABRB0ZK5&psc=1&refRID=5J97VAA2ZG5TABRB0ZK5"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71m2fi%2BfmHL._SL1000_.jpg" alt="Days Gone" class="game" /></a>
+      <a href="https://www.amazon.fr/Sony-Death-Stranding/dp/B01H1OOU8K/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=death+stranding&qid=1559171188&s=gateway&sr=8-1"
+        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71deJ-FfN2L._AC_SL1500_.jpg" alt="Death Stranding" class="game" /></a>
       <figcaption>
-        Days Gone
+        Death Stranding
       </figcaption>
       <figcaption>
-        RDS sur Amazon
+        69,90€ sur Amazon
       </figcaption>
       <figcaption>
-        69,99€ sur PlayStation
+        ???€ sur PlayStation
       </figcaption>
-    </figure>-->
+      <figcaption>
+        Sortie le 08/11/19
+      </figcaption>
+    </figure>
   </div>
 
   <!--
